tambah home user

--- a/SokaJamur/app/src/main/AndroidManifest.xml
+++ b/SokaJamur/app/src/main/AndroidManifest.xml
@@ -23,11 +23,14 @@
             </intent-filter>
         </activity>
 
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
->>>>>>> e57a1798bb73e828d190beefbc1f571b23422ddb
+        >>>>>>> e57a1798bb73e828d190beefbc1f571b23422ddb
+        <activity
+            android:name=".HomeUser"
+            android:label="@string/title_activity_home_user"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
