--- a/SokaJamur/app/local.properties
+++ b/SokaJamur/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 02 14:50:23 ICT 2018
-sdk.dir=C\:\\Users\\Server\\AppData\\Local\\Android\\Sdk
+#Fri May 04 13:59:14 ICT 2018
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\android-sdk
