intent info jamu & baglog

--- a/SokaJamur/app/src/main/AndroidManifest.xml
+++ b/SokaJamur/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:label="DaftarActivity">
 
         </activity>
+        <activity android:name=".InfoJamur">
+        </activity>
+        <activity android:name=".InfoBaglog">
+        </activity>
     </application>
 
 </manifest>
