--- a/SokaJamur/app/local.properties
+++ b/SokaJamur/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 07 18:41:09 ICT 2018
-sdk.dir=C\:\\Users\\TOSHIBA\\AppData\\Local\\Android\\Sdk
+#Tue May 08 07:45:45 ICT 2018
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\android-sdk
