--- a/SokaJamur/app/build.gradle
+++ b/SokaJamur/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
