--- a/SokaJamur/app/local.properties
+++ b/SokaJamur/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 23 08:52:47 ICT 2018
-sdk.dir=C\:\\Users\\TOSHIBA\\AppData\\Local\\Android\\Sdk
+#Mon Jun 04 10:36:36 ICT 2018
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\android-sdk
