list view yang lainnya

--- a/SokaJamur/app/src/main/AndroidManifest.xml
+++ b/SokaJamur/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
@@ -28,7 +28,7 @@
         <activity
             android:name=".HomeUser"
             android:label="@string/title_activity_home_user"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SplashScreen"
             android:theme="@style/AppTheme.NoActionBar">
@@ -40,25 +40,18 @@
         </activity>
         <activity android:name=".PesananSaya" />
         <activity android:name=".ProfilUser" />
-        <activity android:name=".LoginActivity">
-
-        </activity>
+        <activity android:name=".LoginActivity"></activity>
         <activity
             android:name=".DaftarActivity"
-            android:label="DaftarActivity">
-        </activity>
-        <activity android:name=".InfoJamur">
-        </activity>
-        <activity android:name=".InfoBaglog">
-        </activity>
-
+            android:label="DaftarActivity"></activity>
+        <activity android:name=".InfoJamur"></activity>
+        <activity android:name=".InfoBaglog"></activity>
         <activity
             android:name=".HomeAdmin"
             android:label="@string/title_activity_home_admin"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".AdminBarang"/>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".AdminBarang" />
+        <activity android:name=".DetailPesanan"></activity>
     </application>
 
 </manifest>
